welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:10: error: Unit does not take parameters
	chemin()
              ^Program:14: error: type mismatch;
 found   : Unit
 required: Boolean
	if (!estSurBiscuit) {
        ^